apply patch http://issues.apache.org/activemq/browse/AMQ-1293
git-svn-id: https://svn.apache.org/repos/asf/activemq/trunk@550451 13f79535-47bb-0310-9956-ffa450edef68